--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ requestAnimationFrame(render);
 
 window.onload=function starttime(){
 
-        time(h1,'2015,9,10');  //第一次遇见Home 88  北京时间2021年5月5号
+        time(h1,'2021,12,16'); 
         ptimer = setTimeout(starttime,1000); 
 }
 
@@ -233,7 +233,7 @@ window.onload=function starttime(){
 
         var second = parseInt(time%60);  
 
-        obj.innerHTML="思梦<br>我们于2015年9月10号相识<br>咱俩相识的时间已经：<br>"+day+"天"+hour+"小时"+minute+"分"+second+"秒"+"了<br><span>→突如其来的遇见←<br>→始料未及的欢喜←<br>感谢缘分让我们相识相知<br>愿你<br>冬来温雪，夏来赏荷，春煮清茶，秋着布衣，四季就是前路，生活即是江湖</span>"
+        obj.innerHTML="马群<br>我们于2021年12月16号相识<br>咱俩相识的时间已经：<br>"+day+"天"+hour+"小时"+minute+"分"+second+"秒"+"了<br><span>→突如其来的遇见←<br>→始料未及的欢喜←<br>感谢缘分让我们相识相知<br>愿你<br>冬来温雪，夏来赏荷，春煮清茶，秋着布衣，四季就是前路，生活即是江湖</span>"
 
         return true;
 
